I finished the test portlet (vuetify works)

--- a/src/main/webapp/skin/portlet-style.css
+++ b/src/main/webapp/skin/portlet-style.css
@@ -1,3 +1,9 @@
-#hello-title{
+
+#hello-title {
     background-color: greenyellow;
+}
+
+.my-test-button {
+    background-color: #5cbbf6 !important;
+    border-color: #5cbbf6 !important;
 }
